Fix Sidebar shrink + layout issues

--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,182 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Raleway', sans-serif;
 }
 
-
-li{
-    list-style-type: none;
-    padding: 1em;
-}
+    i   {
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  i:hover{
+    transform: translateY(-4px);
+  }
 
 .container{
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: auto 1fr;
     grid-template-rows: 1fr 6fr;
 }
 
 .header{
     grid-column: 2/6;
     grid-row: 1/2;
-    background-color: thistle;
+    background-color: #526D82;
+    color: #DDE6ED;
+    z-index: 1;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 2px 7px 0px;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 50px 60px;
     align-items: center;
     justify-items: space-between;
     padding: 1em;
 }
 
+.top{
+    display: grid;
+    grid-template-columns: 60px 3fr 60px 50px 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
+.bottom{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .sidebar{
+    width: 210px;
     grid-column: 1/2;
     grid-row: 1/3;
-    background-color: aqua;
+    background-color: #27374D;
     display: grid;
-    grid-template-rows: 1fr 6fr;
-    justify-items: center;
+    grid-template-rows: 480px;
+    justify-items: start;
+    align-items: stretch;
+    color: #ecfeff;
+    padding: 1em;
+    font-size: 1.2em;
+    transition: width 300ms ease;
+}
+
+.menu{
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+.logo{
+    font-size: 1.5em;
 }
 
 .content{
     grid-column: 2/6;
-    background-color: blueviolet;
+    background-color: #DDE6ED;
     display: grid;
     grid-template-columns: 5fr 2fr;
     overflow: hidden;
 }
 
-.logo{
-    align-self: center;
+
+.search{
+    grid-column: 1/5;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-.right, .buttons{
+.top > i{
+    padding-left: 10%;
+    padding-right: 1%;
+    font-size: 1.3em;
+    color: #DDE6ED;
+}
+
+input[type="search"]{
+    width: 95%;
+    height: 2em;
+    border: none;
+    border-radius: 1em;
+    background-color: #DDE6ED;
+}
+
+.right{
+    grid-column: 5/-1;
     justify-self: center;
+    align-items: center;
+    display: flex;
+}
+
+.top > img{
+    height: 40px;
+    width: 40px;
+    border-radius: 20px;
+}
+
+.right > h3{
+    padding-left: 10px;
+}
+
+.right > i{
+    padding-right: 5%;
+    font-size: 1.3em;
+    color: #DDE6ED;
+}
+
+.user-info{
+    grid-column: 1/4;
+    display: flex;
+    align-items: center;
+}
+
+.user-info > img{
+    height: 60px;
+    width: 60px;
+    border-radius: 30px;
+}
+
+.user-info > div{
+    padding-left: 15px;
+}
+
+.buttons{
+    grid-column: 4/-1;
+    display: flex;
+    justify-content: end;
+}
+
+button{
+    margin-right: 5px;
+    margin-left: 5px;
+    width: 7em;
+    min-width: 4em;
+    height: 2.5em;
+    font-size: 1em;
+    border: none;
+    border-radius: 1em;
+    color: #DDE6ED;
+    background-color: #27374D;
+}
+
+button:hover{
+    background-color: #27374d4e;
 }
 
 .projects{
     display: grid;
     gap: 2em;
     padding: 2em;
+    padding-right: 1em;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: 4fr;
     overflow-y: scroll;
+}
+
+.projects h2{
+    grid-column: 1/-1;
 }
 
 .projects::-webkit-scrollbar {
@@ -66,13 +184,44 @@ li{
   }
 
 .card{
-    height: 150px;
-    background-color: antiquewhite;
+    height: 175px;
+    background-color: #9DB2BF;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 3px 8px 0px;
     padding: 1em;
+    border-radius: 1em;
+    transition: transform 0.3s ease;
+}
+
+.card:hover{
+    transform: translateY(-5px);
 }
 
 .news{
     padding: 2em;
+    padding-left: 1em;
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    gap: 2em;
+    grid-template-rows: 1.6em;
+}
+
+.news-item{
+    background-color: #9DB2BF;
+    padding: 1em;
+    border-radius: 1em;
+}
+
+
+@media (max-width:844px){
+
+    .sidebar{
+        width: 30px;
+        justify-items: center;
+    }
+    .menu{
+        grid-template-columns: 1fr;
+        justify-items: center;
+    }
+    .menu > p{
+     display: none;
+    }
 }
